[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Instances/UI/LoginScreen.gd" type="Script" id=1]

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.5
margin_top = -101.0
margin_right = 149.5
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.219608, 0.219608, 0.219608, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.5
margin_top = -65.0
margin_right = 118.5
margin_bottom = 65.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackGround/VBoxContainer"]
margin_right = 237.0
margin_bottom = 14.0
text = "Login"
align = 1

[node name="LabelUsername" type="Label" parent="BackGround/VBoxContainer"]
margin_top = 18.0
margin_right = 237.0
margin_bottom = 32.0
text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="BackGround/VBoxContainer"]
margin_top = 36.0
margin_right = 237.0
margin_bottom = 60.0

[node name="LabelPassword" type="Label" parent="BackGround/VBoxContainer"]
margin_top = 64.0
margin_right = 237.0
margin_bottom = 78.0
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="LineEdit" parent="BackGround/VBoxContainer"]
margin_top = 82.0
margin_right = 237.0
margin_bottom = 106.0
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="BackGround/VBoxContainer"]
margin_top = 110.0
margin_right = 237.0
margin_bottom = 130.0

[node name="ButtonRegister" type="Button" parent="BackGround/VBoxContainer/HBoxContainer"]
margin_right = 116.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Register"

[node name="ButtonConnect" type="Button" parent="BackGround/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 237.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Connect"
[connection signal="pressed" from="BackGround/VBoxContainer/HBoxContainer/ButtonConnect" to="." method="_on_ButtonConnect_pressed"]
